<resources>
    <!-- Existing strings -->
    <string name="app_name">Tic-Tac-Toe-App</string>

    <!-- Menu items -->
    <string name="new_game">New Game</string>
    <string name="menu_new_game">New Game</string>
    <string name="menu_difficulty">Difficulty</string>
    <string name="menu_quit">Quit</string>



    <!-- Dialog Strings -->
    <string name="difficulty_choose">Choose Difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>

    <!-- About Dialog -->
    <string name="about">About</string>
    <string name="app_icon_description">App Icon</string>
    <string name="programmer_info">A simple Tic-Tac-Toe game\nDeveloped by Kevin Fabio Ramos López</string>
    <string name="copyright_text">© 2024 All rights reserved</string>
    <string name="ok">OK</string>

    <!-- Quit Dialog -->
    <string name="quit_question">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Existing strings -->
    <string name="first_human">Your turn!</string>
    <string name="turn_computer">Computer\'s turn...</string>
    <string name="turn_human">Your turn!</string>
    <string name="result_tie">It\'s a tie!</string>
    <string name="result_human_wins">You win!</string>
    <string name="result_computer_wins">Computer wins!</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="edit_username">Edit Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="player_name">Player: %1$s</string>
    <string name="cancel">Cancel</string>
    <string name="player_label">Player:</string>

    <string name="select_game_mode">Select Game Mode</string>
    <string name="play_online">Play Online</string>
    <string name="play_against_computer">Play Against Computer</string>
</resources>
