<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_game"
        android:title="@string/menu_new_game"
        android:icon="@drawable/new_game"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ai_difficulty"
        android:title="@string/menu_difficulty"
        android:icon="@drawable/difficulty_level"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/quit"
        android:title="@string/menu_quit"
        android:icon="@drawable/quit_game"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/about"
        android:title="@string/about"
        android:icon="@drawable/about_icon"
        app:showAsAction="never" />

    <item
        android:id="@+id/reset_scores"
        android:icon="@drawable/reset_scores"
        app:showAsAction="ifRoom"
        android:title="@string/reset_scores" />
    <item
        android:id="@+id/edit_username"
        android:title="@string/edit_username"
        app:showAsAction="never" />

</menu>
